main/default/objects/Trace_Request__c/fields/Apex_Code__c.field-meta.xml
<CustomField>
    <fullName>Apex_Code__c</fullName>
    <label>Apex Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>