main/default/objects/Trace_Request__c/fields/Apex_Profiling__c.field-meta.xml
<CustomField>
    <fullName>Apex_Profiling__c</fullName>
    <label>Apex Profiling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>