main/default/objects/Trace_Request__c/fields/Callout__c.field-meta.xml
<CustomField>
    <fullName>Callout__c</fullName>
    <label>Callout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>