main/default/objects/Trace_Request__c/fields/Last_Result_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Result_Date__c</fullName>
    <label>Last Result Date</label>
    <type>DateTime</type>
</CustomField>