main/default/objects/Trace_Request__c/fields/Next_Trace_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Trace_End_Date__c</fullName>
    <label>Next Trace End Date</label>
    <type>DateTime</type>
</CustomField>