main/default/objects/Trace_Request__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Trace_Request__c</referenceTo>
    <relationshipLabel>Trace Requests</relationshipLabel>
    <relationshipName>Trace_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>