main/default/objects/Trace_Request__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>