main/default/objects/Trace_Request__c/fields/Trace_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Trace_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trace Schedule</label>
    <referenceTo>Trace_Schedule__c</referenceTo>
    <relationshipLabel>Trace Requests</relationshipLabel>
    <relationshipName>Trace_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>