main/default/objects/Trace_Request__c/fields/Traced_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Traced_Entity_Id__c</fullName>
    <label>Traced Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>