main/default/objects/Trace_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
                <default>true</default>
                <label>default</label>
            </value>
            <value>
                <fullName>AutoTrace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>