main/default/objects/Trace_Request__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <label>Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>